# Uebung3

./: .cproject  .project  README  test2.txt
Debug/: lrdUebung03  makefile
Debug/src/: bildmanipulation.d  catalog.d  catalogmanipulation.d  rotationsmatrix.d  sternsensor_Main.d  subdir.mk
src/: CMakeLists.txt  Color.cpp  Color.h  Image.cpp  Image.h  PointArray.cpp  PointArray.h  Points.cpp  Points.h  a.out  bildmanipulation.cpp  bildmanipulation.h  catalog.cpp  catalog.h  catalog.h~  catalogmanipulation.cpp  catalogmanipulation.h  rotationsmatrix.cpp  rotationsmatrix.h  sternsensor.cpp  sternsensor_Main.cpp  vectorCatalog.cpp  vectorCatalog.h
srcnew/: bildmanipulation.cpp  catalog.cpp  catalog.h
